# Book-list-Api-v2

./: README.md  goodreadsScrape.py  main.py  pyproject.toml
